--- a/src/app/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/evento-detalhe/evento-detalhe.component.html
@@ -1,4 +1,4 @@
-<nav class="second-nav grey lighten-1">
+<nav class="second-nav deep-orange">
   <div class="nav-wrapper container">
     <a routerLink="/" class="breadcrumb waves-effect waves-light">
       <i class="large material-icons left ">arrow_back</i>Voltar
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<div class="indigo accent-1">
+<div class="bg-realiza">
   <div class="container">
     <br/>
     <h4 class="center">Realização</h4>
@@ -76,7 +76,7 @@
   </div>
 </div>
 
-<div class="grey">
+<div class="bg-fotos">
   <div class="container">
     <br/>
     <h4 class="center white-text">Galeria</h4>
@@ -101,7 +101,7 @@
 </div>
 
 <p class="center">
-  <button class="btn grey" (click)="goBack()">
+  <button class="btn deep-orange" (click)="goBack()">
     <i class="material-icons left small">arrow_back</i>Voltar
   </button>
 </p>
