--- a/src/app/inicio/eventos/eventos.component.html
+++ b/src/app/inicio/eventos/eventos.component.html
@@ -1,7 +1,7 @@
 <div class="section white lighten-3">
   <div class="container">
-    <h4 class="grey-text text-darken-1">Eventos</h4>
-    <div class="divider"></div>
+    <h4 class="deep-orange-text"><b>Eventos</b></h4>
+    <div class="divider deep-orange"></div>
     <br/>
     <div class="row">
 
