--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,9 +1,40 @@
-<div class="grey darken-2 z-depth-1">
-    <div class="">
-        <div class="row" style="padding-top: 28vh;padding-bottom: 32vh; margin:0px;">
-            <div class="col l12 m12 s12 center white-text">
-                
+<div class="slider">
+    <ul class="slides">
+        <li>
+            <img style="filter: brightness(85%)" src="http://www.inf.ufg.br/sites/default/files/uploads/banner-espaco-das-profissoes-2017.png">
+            <!-- random image -->
+            <div class="caption center-align">
+                <h3>Título</h3>
+                <h5 class="light grey-text text-lighten-3">Texto aqui.</h5>
+                <a class="btn red" [routerLink]="['/cursos']" routerLinkActive="active">Link</a>
             </div>
-        </div>
-    </div>
+        </li>
+        <li>
+            <img style="filter: brightness(87%)" src="http://www.facompcastanhal.ufpa.br/images/noticias/headerObi.png">
+            <!-- random image -->
+            <div class="caption left-align">
+                <h3>Título</h3>
+                <h5>Texto aqui.</h5>
+                <button class="btn green" type="button">Link</button>
+            </div>
+        </li>
+        <li>
+            <img style="filter: brightness(90%)" src="https://doity.com.br/media/doity/resized/980x327_evento-2273-banner.png">
+            <!-- random image -->
+            <div class="caption right-align">
+                <h3>Título</h3>
+                <h5 class="light grey-text text-lighten-3">Texto aqui.</h5>
+                <a class="btn purple" [routerLink]="['/cursos']" routerLinkActive="active">Link</a>
+            </div>
+        </li>
+        <li>
+            <img style="filter: brightness(90%)" src="http://blogbalonismo.net/wp-content/uploads/2016/04/o-que-e-balonismo.jpg">
+            <!-- random image -->
+            <div class="caption center-align">
+                <h3>Título</h3>
+                <h5>Texto aqui.</h5>
+                <button class="btn blue" type="button">Link</button>
+            </div>
+        </li>
+    </ul>
 </div>
