--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <nav class="purple darken-2">
+  <nav class="light-blue darken-2">
   <div class="nav-wrapper container">
     <a id="logo-container" href="/" class="brand-logo">
       <img style="padding-top:10px; max-width: 120px;" src="../assets/images/ufg-logo.png">
@@ -8,12 +8,12 @@
     [materializeParams]="[{menuWidth: 300,edge: 'left', closeOnClick: true, draggable: true}]"><i class="material-icons">menu</i>
     </a>
   <ul class="right hide-on-med-and-down">
-    <li routerLinkActive="active"><a routerLink="/inicio">Inicio</a></li>
-    <li routerLinkActive="active"><a routerLink="/sobre">Sobre</a></li>
+    <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
+    <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
   </ul>
   <ul id="nav-mobile" class="side-nav">
-    <li routerLinkActive="active"><a routerLink="/inicio">Inicio</a></li>
-    <li routerLinkActive="active"><a routerLink="/sobre">Sobre</a></li>
+    <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
+    <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
   </ul>
   </div>
 </nav>
