--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,27 +1,31 @@
-<footer class="purple darken-2 page-footer">
+<footer class="light-blue darken-3 page-footer">
 
   <div class="white">
-    <div class="divider"></div>
+    <hr>
     <div class="container">
       <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
         <div class="col offset-l2 l3 offset-m1 m3 s12">
-          <img style="max-width: 12rem" src="../../assets/images/footer/logo-inf.png" />
+          <a href="http://www.inf.ufg.br" target="_blank">
+            <img src="../../assets/images/footer/logo-inf.png" style="max-width:12rem">
+          </a>
         </div>
-        <div class="col offset-l2 l3 offset-m3 m3 s12">
-          <img style="max-width: 12rem" src="../../assets/images/footer/logo-apoema.png" />
+        <div class="col offset-l2 l3 offset-m1 m3 s12">
+          <a href="http://apoema.inf.ufg.br" target="_blank">
+            <img src="../../assets/images/footer/logo-apoema.png" style="max-width:12rem">
+          </a>
         </div>
       </div>
     </div>
   </div>
-
   <div class="menus">
     <div class="container row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Contato</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      <div class="col l6 s12" align="middle">
+        <img style="width: 200px; height:68px" src="../../assets/images/footer/logo-apoema.png">
+        <p class="grey-text text-lighten-4">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2° Andar, Sala 244 - APOEMA</p>
       </div>
-      <div class="col l4 offset-l2 s12 center">
+      <div class="col l3 s12 center">
         <h5 class="white-text">Menus</h5>
+        <hr style="width: 50%">
         <ul>
           <li routerLinkActive="active">
             <a class="grey-text text-lighten-3" routerLink="/inicio">Inicio</a>
@@ -31,10 +35,25 @@
           </li>
         </ul>
       </div>
+      <div class="col l3 s12 center">
+        <h5 class="white-text">Contato</h5>
+        <hr style="width: 65%">
+        <ul>
+          <li>
+            apoema@inf.ufg.br
+          </li>
+          <li>
+            (62) 3521-1724
+          </li>
+          <li>
+            (62) 3521-1505
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 
-  <div class="footer-copyright">
+  <div class="footer-copyright light-blue darken-4">
     <div class="container">
       © Criado por APOEMA/INF - 2018
     </div>
