--- a/src/app/inicio/eventos/evento/evento.component.html
+++ b/src/app/inicio/eventos/evento/evento.component.html
@@ -3,6 +3,6 @@
     <img src="{{evento.imgvertical}}">
   </div>
   <div class="card-action">
-    <a class="teal-text text-darken-3">Confira</a>
+    <a class="btn deep-orange">Confira</a>
   </div>
 </div>
