--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,4 +1,4 @@
-<nav class="second-nav grey lighten-1">
+<nav class="second-nav deep-orange">
   <div class="nav-wrapper container">
     <a routerLink="/" class="breadcrumb waves-effect waves-light">
       <i class="large material-icons left ">arrow_back</i>Voltar
@@ -63,7 +63,7 @@
 
 
 <p class="center">
-  <a class="btn grey" routerLink="/">
+  <a class="btn deep-orange" routerLink="/">
     <i class="material-icons left small">arrow_back</i>Voltar
   </a>
 </p>
