--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,11 +19,11 @@
   </div>
   <div class="menus">
     <div class="container row">
-      <div class="col l6 s12" align="middle">
-        <img style="width: 200px; height:68px" src="../../assets/images/footer/logo-apoema.png">
+      <div class="col l5 s12" align="middle">
+        <img style="width: 200px; height:87px" src="../../assets/images/footer/LOGOPROINF.png">
         <p class="grey-text text-lighten-4">Alameda Palmeiras, s/n - Câmpus Samambaia, Goiânia - GO, 74690-900, 2° Andar, Sala 244 - APOEMA</p>
       </div>
-      <div class="col l3 s12 center">
+      <div class="col l2 s12 center">
         <h5 class="white-text">Menus</h5>
         <hr style="width: 50%">
         <ul>
@@ -35,6 +35,21 @@
           </li>
         </ul>
       </div>
+      <div class="col l2 s12 center">
+        <h5 class="white-text">Parceiros</h5>
+        <hr style="width: 75%">
+        <ul>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#">Parceiro1</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#">Parceiro2</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 " href="#">Parceiro3</a>
+          </li>
+        </ul>
+      </div>
       <div class="col l3 s12 center">
         <h5 class="white-text">Contato</h5>
         <hr style="width: 65%">
@@ -43,10 +58,10 @@
             apoema@inf.ufg.br
           </li>
           <li>
-            (62) 3521-1724
+            (62) 3521-1724 / 1505
           </li>
           <li>
-            (62) 3521-1505
+            (62) 9 9212-9535
           </li>
         </ul>
       </div>
