--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,39 +1,35 @@
 <div class="slider">
     <ul class="slides">
         <li>
-            <img style="filter: brightness(85%)" src="http://www.inf.ufg.br/sites/default/files/uploads/banner-espaco-das-profissoes-2017.png">
+            <img style="filter: brightness(60%)" src="http://www.inf.ufg.br/sites/default/files/uploads/banner_site-espaco-das-profissoes-2018.jpg?1528726046">
             <!-- random image -->
             <div class="caption center-align">
-                <h3>Título</h3>
-                <h5 class="light grey-text text-lighten-3">Texto aqui.</h5>
-                <a class="btn red" [routerLink]="['/cursos']" routerLinkActive="active">Link</a>
+                <h3>Espaço das profissões</h3>
+                <a class="btn red"  routerLink="/evento/esp-prof" >Ver mais</a>
             </div>
         </li>
         <li>
-            <img style="filter: brightness(87%)" src="http://www.facompcastanhal.ufpa.br/images/noticias/headerObi.png">
+            <img style="filter: brightness(60%)" src="http://www.facompcastanhal.ufpa.br/images/noticias/headerObi.png">
             <!-- random image -->
             <div class="caption left-align">
-                <h3>Título</h3>
-                <h5>Texto aqui.</h5>
-                <button class="btn green" type="button">Link</button>
+                <h3>Olimpíada Brasileira de Informática</h3>
+                <a class="btn green"  routerLink="/evento/obi" >Ver mais</a>
             </div>
         </li>
         <li>
-            <img style="filter: brightness(90%)" src="https://doity.com.br/media/doity/resized/980x327_evento-2273-banner.png">
+            <img style="filter: brightness(100%)" src="http://www.inf.ufg.br/sites/default/files/uploads/chamada-jornada-goiania-software-2017.png">
             <!-- random image -->
             <div class="caption right-align">
-                <h3>Título</h3>
-                <h5 class="light grey-text text-lighten-3">Texto aqui.</h5>
-                <a class="btn purple" [routerLink]="['/cursos']" routerLinkActive="active">Link</a>
+                <h3>Jornada Goiana de Engenharia de Software</h3>
+                <a class="btn purple"  routerLink="/evento/jges" >Ver mais</a>
             </div>
         </li>
         <li>
-            <img style="filter: brightness(90%)" src="http://blogbalonismo.net/wp-content/uploads/2016/04/o-que-e-balonismo.jpg">
+            <img style="filter: brightness(60%)" src="http://www.inf.ufg.br/sites/default/files/uploads/banner-site-1000x230_1.png?1528309129">
             <!-- random image -->
             <div class="caption center-align">
-                <h3>Título</h3>
-                <h5>Texto aqui.</h5>
-                <button class="btn blue" type="button">Link</button>
+                <h3>Escola Regional de Informática</h3>
+                <a class="btn blue"  routerLink="/evento/eri-ersi-erad" >Ver mais</a>
             </div>
         </li>
     </ul>
