add cbs, fonte maior e tirando datas dos banners

--- a/src/app/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/evento-detalhe/evento-detalhe.component.html
@@ -12,7 +12,7 @@
     <br/>
     <h3 class="center">{{evento.nome}}</h3>
     <br/>
-    <p class="center">
+    <p id="sinopse" class="fonte18">
       {{evento.sinopse}}
     </p>
     <br/>
@@ -21,7 +21,7 @@
 </div>
 
 <div class="white galeria">
-  <div class="container">
+  <div class="container fonte18">
     <br/>
     <h4 class="center">Organização</h4>
     <br/>
@@ -49,7 +49,7 @@
 </div>
 
 <div class="bg-realiza">
-  <div class="container">
+  <div class="container fonte18">
     <br/>
     <h4 class="center">Realização</h4>
     <br/>
