--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,15 +1,15 @@
 <div class="slider">
     <ul class="slides">
         <li>
-            <img style="filter: brightness(60%)" src="http://www.inf.ufg.br/sites/default/files/uploads/banner_site-espaco-das-profissoes-2018.jpg?1528726046">
+            <img style="filter: brightness(60%)" src="../../../assets/images/esp-horizontal.jpg">
             <!-- random image -->
             <div class="caption center-align">
                 <h3>Espaço das profissões</h3>
-                <a class="btn red"  routerLink="/evento/esp-prof" >Ver mais</a>
+                <a class="btn purple"  routerLink="/evento/esp-prof" >Ver mais</a>
             </div>
         </li>
         <li>
-            <img style="filter: brightness(60%)" src="http://www.facompcastanhal.ufpa.br/images/noticias/headerObi.png">
+            <img style="filter: brightness(60%)" src="../../../assets/images/obi-horizontal.png">
             <!-- random image -->
             <div class="caption left-align">
                 <h3>Olimpíada Brasileira de Informática</h3>
@@ -17,19 +17,19 @@
             </div>
         </li>
         <li>
-            <img style="filter: brightness(100%)" src="http://www.inf.ufg.br/sites/default/files/uploads/chamada-jornada-goiania-software-2017.png">
+            <img style="filter: brightness(100%)" src="../../../assets/images/jges-horizontal.png">
             <!-- random image -->
             <div class="caption right-align">
                 <h3>Jornada Goiana de Engenharia de Software</h3>
-                <a class="btn purple"  routerLink="/evento/jges" >Ver mais</a>
+                <a class="btn red"  routerLink="/evento/jges" >Ver mais</a>
             </div>
         </li>
         <li>
-            <img style="filter: brightness(60%)" src="http://www.inf.ufg.br/sites/default/files/uploads/banner-site-1000x230_1.png?1528309129">
+            <img style="filter: brightness(60%)" src="../../../assets/images/ersigo-horizontal.png">
             <!-- random image -->
             <div class="caption center-align">
                 <h3>Escola Regional de Informática</h3>
-                <a class="btn blue"  routerLink="/evento/eri-ersi-erad" >Ver mais</a>
+                <a class="btn orange"  routerLink="/evento/eri-ersi-erad" >Ver mais</a>
             </div>
         </li>
     </ul>
