--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -11,14 +11,9 @@
   <div class="container">
     <div class="row">
       <div class="col s12 m6 l6">
-        <img style="width:100%; border: 2px solid grey" src="../assets/images/foto-antiga-ufg.jpg" />
-      </div>
-      <div class="col s12 m6 l6">
-        <h4 class="grey-text text-darken-1">Apoema</h4>
+        <h4 class="grey-text text-darken-1">PROINF</h4>
         <p>
-          This is a square image. Add the "circle" class to it to make it appear circular. This is a square image. Add the "circle"
-          class to it to make it appear circular. This is a square image. Add the "circle" class to it to make it appear
-          circular. This is a square image. Add the "circle" class to it to make it appear circular.
+          O Programa de Apoio às Ações Acadêmicas, Promocionais e Institucionais do Instituto de Informática – Pró-INF surgiu em razão dos fatores institucionais e conjunturais condicionantes à realização de eventos do instituto, nem sempre favoráveis às respectivas implementações. Soma-se a isso, a disponibilidade de recursos quase nunca satisfatória para realização das atividades primárias, de apoio e gerenciais, tendo em vista a redução de tais fatores limitantes.
         </p>
       </div>
     </div>
@@ -29,34 +24,28 @@
   <div class="container">
     <div class="row">
       <div class="col s12 m6 l6">
-        <h4 class="white-text">Apoema</h4>
-        <p class="white-text">
-          This is a square image. Add the "circle" class to it to make it appear circular. This is a square image. Add the "circle"
-          class to it to make it appear circular. This is a square image. Add the "circle" class to it to make it appear
-          circular. This is a square image. Add the "circle" class to it to make it appear circular.
+        <h4 class="white-text">Objetivo</h4>
+        <p class="white-text left">
+          O PROINF tem por objetivo aprimorar os seguintes aspectos quanto à realização dos eventos promovidos pelo INF:
+          <br><br>
+          &nbsp;&bull; Torná-los atrativos e bem elaborados, de modo a aumentar sua efetividade;
+          <br>
+          &nbsp;&bull; Aprimorar continuamente as ações e projetos do INF;
+          <br>
+          &nbsp;&bull; Melhorar a percepção de qualidade dos projetos/ações;
+          <br>
+          &nbsp;&bull; Compartilhar o conhecimento entre os vários projetos/ações;
+          <br>
+          &nbsp;&bull; Propiciar maior envolvimento do público interno;
+          <br>
+          &nbsp;&bull; Propiciar maior participação do público externo;
+          <br>
+          &nbsp;&bull; Mapear o nível de competências e de capacidades para realização dos projetos/ações;
+          <br>
+          &nbsp;&bull; Gerir adequadamente projetos/ações.
         </p>
       </div>
-      <div class="col s12 m6 l6">
-        <img style="width:100%; border: 2px solid grey" src="../assets/images/foto-antiga-ufg.jpg" />
-      </div>
-    </div>
-  </div>
-</div>
-<div class="section white lighten-5">
-  <br/>
-  <div class="container">
-    <div class="row">
-      <div class="col s12 m6 l6">
-        <img style="width:100%; border: 2px solid grey" src="../assets/images/foto-antiga-ufg.jpg" />
-      </div>
-      <div class="col s12 m6 l6">
-        <h4 class="grey-text text-darken-1">Apoema</h4>
-        <p>
-          This is a square image. Add the "circle" class to it to make it appear circular. This is a square image. Add the "circle"
-          class to it to make it appear circular. This is a square image. Add the "circle" class to it to make it appear
-          circular. This is a square image. Add the "circle" class to it to make it appear circular.
-        </p>
-      </div>
+
     </div>
   </div>
 </div>
