--- a/src/app/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/evento-detalhe/evento-detalhe.component.html
@@ -112,6 +112,12 @@
       <div class="col s12 m6 l6">
         <img  materialize="materialbox" class="materialboxed img-boxed" src={{evento.img4}}>
       </div>
+      <div class="col s12 m6 l6">
+        <img  materialize="materialbox" class="materialboxed img-boxed" src={{evento.img5}}>
+      </div>
+      <div class="col s12 m6 l6">
+        <img  materialize="materialbox" class="materialboxed img-boxed" src={{evento.img6}}>
+      </div>
 
     </div>
   </div>
