--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -10,11 +10,9 @@
   <br/>
   <div class="container">
     <div class="row">
-      <div class="col s12 m6 l6">
+      <div class="col s12 m12 l12">
         <h4 class="grey-text text-darken-1">PROINF</h4>
-        <p>
           O Programa de Apoio às Ações Acadêmicas, Promocionais e Institucionais do Instituto de Informática – Pró-INF surgiu em razão dos fatores institucionais e conjunturais condicionantes à realização de eventos do instituto, nem sempre favoráveis às respectivas implementações. Soma-se a isso, a disponibilidade de recursos quase nunca satisfatória para realização das atividades primárias, de apoio e gerenciais, tendo em vista a redução de tais fatores limitantes.
-        </p>
       </div>
     </div>
   </div>
@@ -23,9 +21,9 @@
   <br/>
   <div class="container">
     <div class="row">
-      <div class="col s12 m6 l6">
+      <div class="col s12 m12 l12">
         <h4 class="white-text">Objetivo</h4>
-        <p class="white-text left">
+        <div class="white-text left">
           O PROINF tem por objetivo aprimorar os seguintes aspectos quanto à realização dos eventos promovidos pelo INF:
           <br><br>
           &nbsp;&bull; Torná-los atrativos e bem elaborados, de modo a aumentar sua efetividade;
@@ -43,7 +41,7 @@
           &nbsp;&bull; Mapear o nível de competências e de capacidades para realização dos projetos/ações;
           <br>
           &nbsp;&bull; Gerir adequadamente projetos/ações.
-        </p>
+        </div>
       </div>
 
     </div>
