pdf programacao cbs

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,11 +1,11 @@
 <div class="slider">
     <ul class="slides">
         <li>
-            <img style="filter: brightness(60%)" src="../../../assets/images/esp-horizontal.jpg">
+            <img class="bg-img" style="filter: brightness(40%)" src="../../../assets/images/cbs.jpg">
             <!-- random image -->
             <div class="caption center-align">
-                <h3>Espaço das profissões</h3>
-                <a class="btn purple"  routerLink="/evento/esp-prof" >Ver mais</a>
+                <h3>Congresso Brasileiro de Sistemas</h3>
+                <a class="btn purple"  routerLink="/evento/cbs" >Ver mais</a>
             </div>
         </li>
         <li>
