criando página de programação

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -5,7 +5,9 @@
             <!-- random image -->
             <div class="caption center-align">
                 <h3>Congresso Brasileiro de Sistemas</h3>
-                <a class="btn purple"  routerLink="/evento/cbs" >Ver mais</a>
+                <a class="btn purple"  routerLink="/evento/cbs" >Ver mais</a><br><br>
+                <a class="btn green"  routerLink="/programacaocbs" >Ver Programação Geral</a><br><br>
+                <a class="btn blue"  href="../../../assets/Programacao_14CBS.pdf" download>Baixar Programação Completa</a>
             </div>
         </li>
         <li>
