adicionando rodape-cbs e capa-cbs

--- a/src/app/programacaocbs/programacaocbs.component.html
+++ b/src/app/programacaocbs/programacaocbs.component.html
@@ -1,6 +1,9 @@
+<div align="center" class="section">
+  <img class="responsive-img" src="assets/images/cbs2.png">
+</div>
 <div class="container">
   <br>
-  <h4 class="font-bold green-text text-darken-2">Programação Geral 14º Congresso Brasileiro de Sistemas</h4>
+  <h4 align="center" class="font-bold green-text text-darken-2">Programação Geral</h4>
   <br>
   <h5 style="padding:10px" class="green darken-4 white-text" align="center">25/10/2018</h5>
   <table class="striped centered responsive-table">
@@ -179,4 +182,11 @@
     </tbody>
   </table>
   <!-- terceira tabela fim -->
+</div>
+<div class="section" align="center">
+  <a class="btn blue" href="assets/Programacao_14CBS.pdf" download>Veja a Programação Completa do Evento</a>
+</div>
+<div class="divider"></div>
+<div align="center" class="section">
+  <img class="responsive-img" src="assets/images/cbs-rodape.png">
 </div>
