--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,16 @@
     writing-mode: vertical-rl;
     transform: rotate(180deg);
 }
+
+.bg { 
+    /* The image used */
+    background-image: url("assets/images/cbs2.png");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
