aplicando modificações para cbs

--- a/src/app/cbs/programacao/programacao.component.html
+++ b/src/app/cbs/programacao/programacao.component.html
@@ -1,6 +1,4 @@
-<div align="center" class="section">
-  <img class="responsive-img" src="assets/images/cbs2.png">
-</div>
+<app-cabeca></app-cabeca>
 <div class="container">
   <br>
   <h4 align="center" class="font-bold green-text text-darken-2">Programação Geral</h4>
@@ -184,9 +182,6 @@
   <!-- terceira tabela fim -->
 </div>
 <div class="section" align="center">
-  <a class="btn blue" href="assets/Programacao_14CBS.pdf" download>Veja a Programação Completa do Evento</a>
+  <a class="btn blue bnt-responsive" href="assets/Programacao_14CBS.pdf" download>Veja a Programação Completa do Evento</a>
 </div>
-<div class="divider"></div>
-<div align="center" class="section">
-  <img class="responsive-img" src="assets/images/cbs-rodape.png">
-</div>
+<app-faixa></app-faixa>
