--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,12 +4,12 @@
     <hr>
     <div class="container">
       <div class="row" style="padding-top: 5vh;padding-bottom: 5vh; margin:0px;">
-        <div class="col offset-l2 l3 offset-m1 m3 s12">
+        <div align="middle" class="col offset-l2 l3 offset-m1 m3 s12">
           <a href="http://www.inf.ufg.br" target="_blank">
             <img src="../../assets/images/footer/logo-inf.png" style="max-width:12rem">
           </a>
         </div>
-        <div class="col offset-l2 l3 offset-m1 m3 s12">
+        <div align="center" class="col offset-l2 l3 offset-m1 m3 s12">
           <a href="http://apoema.inf.ufg.br" target="_blank">
             <img src="../../assets/images/footer/logo-apoema.png" style="max-width:12rem">
           </a>
