--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,13 +1,11 @@
 <div class="slider">
     <ul class="slides">
         <li>
-            <img class="bg-img" style="filter: brightness(40%)" src="../../../assets/images/cbs.jpg">
-            <!-- random image -->
-            <div class="caption center-align">
-                <h3>Congresso Brasileiro de Sistemas</h3>
-                <a class="btn purple"  routerLink="/evento/cbs" >Ver mais</a><br><br>
-                <a class="btn green"  routerLink="/programacaocbs" >Ver Programação Geral</a><br><br>
-                <a class="btn blue"  href="../../../assets/Programacao_14CBS.pdf" download>Baixar Programação Completa</a>
+            <div class="center-align bg-responsive">
+                <a style="margin-top:10px" class="btn purple" routerLink="/evento/cbs">Visão Geral</a><br><br>
+                <a class="btn green" routerLink="/programacaocbs">Ver Programação Geral</a><br><br>
+                <a class="btn blue" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
+                <a class="btn red" routerLink="/sessoes">Ver Sessões Técnicas</a><br><br>
             </div>
         </li>
         <li>
@@ -15,7 +13,7 @@
             <!-- random image -->
             <div class="caption left-align">
                 <h3>Olimpíada Brasileira de Informática</h3>
-                <a class="btn green"  routerLink="/evento/obi" >Ver mais</a>
+                <a class="btn green" routerLink="/evento/obi">Ver mais</a>
             </div>
         </li>
         <li>
@@ -23,7 +21,7 @@
             <!-- random image -->
             <div class="caption right-align">
                 <h3>Jornada Goiana de Engenharia de Software</h3>
-                <a class="btn red"  routerLink="/evento/jges" >Ver mais</a>
+                <a class="btn red" routerLink="/evento/jges">Ver mais</a>
             </div>
         </li>
         <li>
@@ -31,7 +29,7 @@
             <!-- random image -->
             <div class="caption center-align">
                 <h3>Escola Regional de Informática</h3>
-                <a class="btn orange"  routerLink="/evento/eri-ersi-erad" >Ver mais</a>
+                <a class="btn orange" routerLink="/evento/eri-ersi-erad">Ver mais</a>
             </div>
         </li>
     </ul>
