alterações em sinopse do cbs

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -1,11 +1,12 @@
 <div class="slider">
     <ul class="slides">
         <li>
-            <div class="center-align bg-responsive">
-                <a style="margin-top:10px" class="btn purple" routerLink="/evento/cbs">Visão Geral</a><br><br>
-                <a class="btn green" routerLink="/programacaocbs">Ver Programação Geral</a><br><br>
-                <a class="btn blue" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
-                <a class="btn red" routerLink="/sessoes">Ver Sessões Técnicas</a><br><br>
+            <img style="filter: brightness(70%)" src="../../../assets/images/cbs.jpg">
+            <div class="caption center-align">
+                <a class="btn purple slide-cbs-btn" routerLink="/evento/cbs">Visão Geral</a><br><br>
+                <a class="btn green slide-cbs-btn" routerLink="/programacaocbs">Ver Programação Geral</a><br><br>
+                <a class="btn blue slide-cbs-btn" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
+                <a class="btn red slide-cbs-btn" routerLink="/sessoes">Ver Sessões Técnicas</a><br><br>
             </div>
         </li>
         <li>
