--- a/src/app/cbs/cabeca/cabeca.component.html
+++ b/src/app/cbs/cabeca/cabeca.component.html
@@ -9,20 +9,13 @@
   <img class="responsive-img" src="assets/images/cbs.jpg">
   <div class="container">
     <div class="row">
-      <div class="col s12 l3">
-        <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/evento/cbs">Visão Geral</a>
-      </div>
-      <div class="col s12 l3">
-        <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/programacaocbs">Programação
-          Geral</a>
-      </div>
-      <div class="col s12 l3">
-        <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/palestrantes">Palestrantes</a>
-      </div>
-      <div class="col s12 l3">
-        <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/sessoes">Sessões Técnicas</a>
-      </div>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/evento/cbs">Visão Geral</a>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/programacaocbs">Programação
+        Geral</a>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/palestrantes">Palestrantes</a>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" href="">Inscrições</a>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/sessoes">Sessões Técnicas</a>
     </div>
   </div>
-
 </div>
+<hr>
