--- a/src/app/cbs/sessaotecnica/sessaotecnica.component.html
+++ b/src/app/cbs/sessaotecnica/sessaotecnica.component.html
@@ -1,2 +1,5 @@
 <app-cabeca></app-cabeca>
+<div class="section" align="center">
+    <a class="btn green bnt-responsive" href="assets/sessoes-cbs/pdfs.zip" download>Download Sessões Técnicas</a>
+</div>
 <app-faixa></app-faixa>
