add proceedings e link inscrições

--- a/src/app/cbs/cabeca/cabeca.component.html
+++ b/src/app/cbs/cabeca/cabeca.component.html
@@ -13,8 +13,8 @@
       <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/programacaocbs">Programação
         Geral</a>
       <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/palestrantes">Palestrantes</a>
-      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" href="">Inscrições</a>
-      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/sessoes">Sessões Técnicas</a>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" href="http://conveniar.rtve.org.br/Eventos/Forms/Servicos/EventoDados.aspx?action=3">Inscrições</a>
+      <a class="cabeca-btn waves-effect waves-light btn blue darken-3" routerLink="/sessoes">PROCEEDINGS</a>
     </div>
   </div>
 </div>
