--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -6,7 +6,7 @@
                 <a class="btn purple slide-cbs-btn" routerLink="/evento/cbs">Visão Geral</a><br><br>
                 <a class="btn green slide-cbs-btn" routerLink="/programacaocbs">Ver Programação Geral</a><br><br>
                 <a class="btn blue slide-cbs-btn" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
-                <a class="btn red slide-cbs-btn" routerLink="/sessoes">Ver Sessões Técnicas</a><br><br>
+                <a class="btn red slide-cbs-btn" routerLink="/sessoes">Ver PROCEEDINGS</a><br><br>
             </div>
         </li>
         <li>
