aplicando alterações visao geral

--- a/src/app/cbs/programacao/programacao.component.html
+++ b/src/app/cbs/programacao/programacao.component.html
@@ -13,8 +13,8 @@
       <tr>
         <td>9:00h às 12:00h</td>
         <td>Seminário – Parte I :: Auditório IPTSP <br>
-          J. Donald R. de Raadt. <br>
-          Perspectiva Sistémica de la Informática
+          J. Donald R. de Raadt. <br><br>
+          <b>Perspectiva Sistémica de la Informática</b>
         </td>
       </tr>
       <tr>
@@ -25,8 +25,8 @@
       <tr>
         <td>10:45h às 12:00h</td>
         <td>Seminário – Parte I :: Auditório IPTSP <br>
-          J. Donald R. de Raadt. <br>
-          Perspectiva Sistémica de la Informática
+          J. Donald R. de Raadt. <br><br>
+          <b>Perspectiva Sistémica de la Informática</b>
         </td>
       </tr>
       <tr>
@@ -37,8 +37,8 @@
       <tr>
         <td>13:30h às 16:00h</td>
         <td>Seminário – Parte II :: Auditório IPTSP <br>
-          J. Donald R. de Raadt. <br>
-          Perspectiva Sistémica de la Informática
+          J. Donald R. de Raadt. <br><br>
+          <b>Perspectiva Sistémica de la Informática</b>
         </td>
       </tr>
       <tr>
@@ -49,8 +49,8 @@
       <tr>
         <td>16:30h às 18:30h</td>
         <td>Workshop :: Auditório IPTSP<br>
-          Maria José Esteves<br>
-          Sistêmico? A que se refere hoje?<br>
+          Maria José Esteves<br><br>
+          <b>Sistêmico? A que se refere hoje?</b><br>
         </td>
       </tr>
       <tr>
@@ -61,9 +61,9 @@
       <tr>
         <td>19:30h às 20:30h</td>
         <td>Palestra de Abertura :: Auditório IPTSP<br>
-          Alexander Laszlo<br>
-          Liderazgo e Innovación Sistémica: sistemas sociotécnicos, sistemas ecológicos<br>
-          y diseño de sistemas evolutivos
+          Alexander Laszlo<br><br>
+          <b>Liderazgo e Innovación Sistémica: sistemas sociotécnicos, sistemas ecológicos<br>
+          y diseño de sistemas evolutivos</b>
         </td>
       </tr>
     </tbody>
@@ -75,10 +75,10 @@
     <tbody>
       <tr>
         <td>8:00h às 9:00h</td>
-        <td>Sessão Técnica I – Administração e Redes entre Organizações<br>
+        <td>Sessão Técnica I – <b>Administração e Redes entre Organizações</b><br>
           Sala 403 :: IPTSP<br>
           <br>
-          Sessão Técnica II – Economia e Desenvolvimento<br>
+          Sessão Técnica II – <b>Economia e Desenvolvimento</b><br>
           Sala Leitura :: IPTSP<br>
         </td>
       </tr>
@@ -87,8 +87,7 @@
         <td>Palestra 1 – Otávio de Avelar Esteves<br>
           Auditório IPTSP<br>
           <br>
-          Uma experiência de aplicação do pensamento sistêmico no ensino de engenharia
-
+          <b>Uma experiência de aplicação do pensamento sistêmico no ensino de engenharia</b>
         </td>
       </tr>
       <tr>
@@ -98,21 +97,21 @@
       </tr>
       <tr>
         <td>10:20h às 11:20h</td>
-        <td>Sessão Técnica III – Sociologia e Políticas Públicas<br>
+        <td>Sessão Técnica III – <b>Sociologia e Políticas Públicas</b><br>
           Sala 403 :: IPTSP<br><br>
-          Sessão Técnica IV – Psicologia e Saúde & Inovação Sistêmica<br>
+          Sessão Técnica IV – <b>Psicologia e Saúde & Inovação Sistêmica</b><br>
           Sala Leitura :: IPTSP
           <hr>
           Palestra 2 - Leonardo Antônio Alves<br>
-          Auditório IPTSP<br>
-          Criptomoedas/moedas digitais e seu impacto na sociedade contemporânea<br>
+          Auditório IPTSP<br><br>
+          <b>Criptomoedas/moedas digitais e seu impacto na sociedade contemporânea</b><br>
         </td>
       </tr>
       <tr>
         <td>11:30h às 12:30h</td>
         <td>Palestra 3 – J. Donald R. de Raadt<br>
-          Auditório IPTSP<br>
-          Razonamiento Cybernético y la Ética del Vivir y Trabajar
+          Auditório IPTSP<br><br>
+          <b>Razonamiento Cybernético y la Ética del Vivir y Trabajar</b>
         </td>
       </tr>
       <tr>
@@ -129,20 +128,24 @@
     <tbody>
       <tr>
         <td>14:00h às 15:00h</td>
-        <td>Sessão Técnica I – Administração e Redes entre Organizações<br>
-          Sala 403 :: IPTSP<br>
-          <br>
-          Sessão Técnica II – Economia e Desenvolvimento<br>
-          Sala Leitura :: IPTSP<br>
+        <td>Sessão Técnica V – <b>Epistemologia e Pesquisa Sistêmica</b><br>
+          Sala 103 :: Faculdade de Educação<br><br>
+          Sessão Técnica VI – <b>Tecnologia e Sistemas e Informação e Comunicação</b><br>
+          Sala 104 :: Faculdade de Educação<br><br>
+          Sessão Técnica VII – <b>Administração e Redes entre Organizações & Sociologia e Políticas Públicas</b><br>
+          Sala 105 :: Faculdade de Educação<br>
+          <hr><br>
+          Palestra 4 –Luciano Cunha de Sousa<br>
+          Auditório IPTSP<br><br>
+          <b>Agenda brasileira para a Indústria 4.0</b>
         </td>
       </tr>
       <tr>
         <td>15:10h às 16:00h</td>
-        <td>Palestra 1 – Otávio de Avelar Esteves<br>
-          Auditório IPTSP<br>
-          <br>
-          Uma experiência de aplicação do pensamento sistêmico no ensino de engenharia
-
+        <td>Palestra 5 – Prof. Sandro Luis Schlindwein<br>
+          Auditório IPTSP<br><br>
+          <b>O dia depois de amanhã: pensamento sistêmico-cibernético
+            para aprender a viver no Antropoceno</b>
         </td>
       </tr>
       <tr>
@@ -152,23 +155,23 @@
       </tr>
       <tr>
         <td>16:30h às 17:30h</td>
-        <td>Sessão Técnica VIII – Tecnologia e Sistemas e Informação e Comunicação<br>
+        <td>Sessão Técnica VIII – <b>Tecnologia e Sistemas e Informação e Comunicação</b><br>
           Sala 103 :: Faculdade de Educação<br><br>
-          Sessão Técnica IX – Sociologia e Políticas Públicas<br>
+          Sessão Técnica IX – <b>Sociologia e Políticas Públicas</b><br>
           Sala 104 :: Faculdade de Educação
           <hr>
           Palestra 6 – Christian Maciel De Britto<br>
-          Auditório IPTSP<br>
-          Pensamento Sistêmico Multimodal: aprofundamentos quanto a método, teoria e sociologia no contexto da<br>
-          sustentabilidade e da intradisciplinaridade
+          Auditório IPTSP<br><br>
+          <b>Pensamento Sistêmico Multimodal: aprofundamentos quanto a método, teoria e sociologia no contexto da<br>
+          sustentabilidade e da intradisciplinaridade</b>
 
         </td>
       </tr>
       <tr>
         <td>17:30h às 18:30h</td>
-        <td>Palestra 6 – Celso Gonçalves Camilo Junior<br>
-          Auditório IPTSP<br>
-          Uma Experiência de Aplicação da Inovação Aberta e Social no Município de Goiânia<br>
+        <td>Palestra 7 – Celso Gonçalves Camilo Junior<br>
+          Auditório IPTSP<br><br>
+          <b>Uma Experiência de Aplicação da Inovação Aberta e Social no Município de Goiânia</b><br>
         </td>
       </tr>
       <tr>
