--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<div class="navbar">
-  <nav class="light-blue darken-2">
+<div class="navbar-fixed">
+  <nav class="color linear">
     <div class="nav-wrapper container">
       <a id="logo-container" href="/" class="brand-logo">
-        <img style="padding-top:10px; max-width: 120px;" src="../assets/images/footer/logo-proinf.png">
+        <img style="padding-top:10px; max-width: 100px;" src="../assets/images/footer/logo-proinf.png">
       </a>
       <a href="#" data-activates="nav-mobile" class="button-collapse" materialize="sideNav" [materializeParams]="[{menuWidth: 300,edge: 'left', closeOnClick: true, draggable: true}]"><i
           class="material-icons">menu</i>
@@ -11,10 +11,11 @@
         <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
         <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
       </ul>
-      <ul id="nav-mobile" class="side-nav">
-        <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
-        <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
-      </ul>
     </div>
   </nav>
 </div>
+
+<ul id="nav-mobile" class="side-nav">
+  <li routerLinkActive="active"><a routerLink="/inicio"><b>Inicio</b></a></li>
+  <li routerLinkActive="active"><a routerLink="/sobre"><b>Sobre</b></a></li>
+</ul>
