consertando btn no slider cbs

--- a/src/app/inicio/slider/slider.component.html
+++ b/src/app/inicio/slider/slider.component.html
@@ -2,7 +2,7 @@
     <ul class="slides">
         <li>
             <img style="filter: brightness(70%)" src="../../../assets/images/cbs.jpg">
-            <div class="caption center-align">
+            <div style="top:10%" class="caption center-align">
                 <a class="btn purple slide-cbs-btn" routerLink="/evento/cbs">Visão Geral</a><br><br>
                 <a class="btn green slide-cbs-btn" routerLink="/programacaocbs">Ver Programação Geral</a><br><br>
                 <a class="btn blue slide-cbs-btn" routerLink="/palestrantes">Ver Palestrantes</a><br><br>
